updated the artwork to accomodate the latest discussions with bobby: - internet/bonjour icons: will be the crisper safari bonjour icon vs. either the link-globe or the network-globe for which we'll take apple artwork (we tried some other things but they didn't really work) - connections browser toolbar icon: bobby will come up with a miniature window design that contains a person an a document and should have sent it to us already :( - the door now fits in quite well although i ordered some brightness/contrast variations because i think it could fitin better - changed the proportions of the browser person entry a little bit to accomodate the bigger lock

--- a/.gitattributes
+++ b/.gitattributes
@@ -1623,6 +1623,7 @@ artwork/Action.tiff -text
 artwork/ActionPressed.tiff -text
 artwork/AdvancedPrefs.tiff -text
 artwork/Announce.tiff -text
+artwork/Bonjour13.png -text
 artwork/CandyBar.png -text
 artwork/Conceal.png -text
 artwork/DefaultPerson.png -text
