--- a/.gitattributes
+++ b/.gitattributes
@@ -1533,6 +1533,8 @@ Tests/DataTests.m -text
 /TextView.m -text
 /TexturedButtonCell.h -text
 /TexturedButtonCell.m -text
+/ThousandSeparatorValueTransformer.h -text
+/ThousandSeparatorValueTransformer.m -text
 /Toolbar.h -text
 /Toolbar.m -text
 /Typesetter.m -text
