- fixed UTF8 recognition info when only an ae or an ue was in the file (then EUC encodings had been chosen). now if one ue or one ae is in the utf8 code then utf8 is chosen - removed user files from project

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ SubEthaEdit.xcodeproj/*.pbxuser
 /SubEthaEditSuite.scriptTerminology
 /TCMTextSuite.scriptSuite
 /TCMTextSuite.scriptTerminology
+UniversalDetector/UniversalDetector.xcodeproj/*.mode*
+UniversalDetector/UniversalDetector.xcodeproj/*.pbxuser
