--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,9 @@ artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
+artwork/bobby/color-pen-and-text-1.png -text
+artwork/bobby/pen-and-text-1.png -text
+artwork/bobby/render-test-1.png -text
 artwork/dmg_background.graffle -text
 artwork/icons/Document-b3-128.psd -text
 artwork/icons/Document-b3-16.psd -text
