Rollover for rule removeal button.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1671,6 +1671,7 @@ artwork/Precedence_Add.tiff -text
 artwork/Precedence_AddPressed.tiff -text
 artwork/Precedence_Remove.tiff -text
 artwork/Precedence_RemovePressed.tiff -text
+artwork/Precedence_RemoveRollover.tiff -text
 artwork/PreviousChange.png -text
 artwork/PreviousChange.psd -text
 artwork/PreviousSymbol.png -text
