Changing button artwork to png

--- a/.gitattributes
+++ b/.gitattributes
@@ -1670,7 +1670,7 @@ artwork/PrecedencePrefs.tif -text
 artwork/Precedence_Add.tiff -text
 artwork/Precedence_AddPressed.tiff -text
 artwork/Precedence_Remove.tiff -text
-artwork/Precedence_RemovePressed.tiff -text
+artwork/Precedence_RemovePressed.png -text
 artwork/Precedence_RemoveRollover.tiff -text
 artwork/PreviousChange.png -text
 artwork/PreviousChange.psd -text
