--- a/.gitattributes
+++ b/.gitattributes
@@ -1667,6 +1667,9 @@ artwork/NamedLogo2.tiff -text
 artwork/NextChange.png -text
 artwork/NextSymbol.png -text
 artwork/ParticipantBar_Fill.tiff -text
+artwork/ParticipantFollowActive.png -text
+artwork/ParticipantFollowEmpty.png -text
+artwork/ParticipantFollowSource.psd -text
 artwork/Participants.icns -text
 artwork/PrecedencePrefs.tif -text
 artwork/Precedence_Add.tiff -text
