- added bobbys next variant - added lineform document with tests of mine

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,10 @@ artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
+artwork/bobby/Woody.lineform/data -text
+artwork/bobby/Woody.lineform/image0.png -text
 artwork/bobby/color-pen-and-text-1.png -text
+artwork/bobby/color-pen-and-text-2.png -text
 artwork/bobby/pen-and-text-1.png -text
 artwork/bobby/render-test-1.png -text
 artwork/dmg_background.graffle -text
