- adding bobbys intermediate versions of the men

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,10 +7,16 @@ artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
 artwork/bobby/Woody.lineform/data -text
 artwork/bobby/Woody.lineform/image0.png -text
+artwork/bobby/bigtest4.png -text
 artwork/bobby/color-pen-and-text-1.png -text
 artwork/bobby/color-pen-and-text-2.png -text
+artwork/bobby/hangingman.png -text
 artwork/bobby/pen-and-text-1.png -text
 artwork/bobby/render-test-1.png -text
+artwork/bobby/test.png -text
+artwork/bobby/test2.png -text
+artwork/bobby/test3.png -text
+artwork/bobby/test4.png -text
 artwork/dmg_background.graffle -text
 artwork/icons/Document-b3-128.psd -text
 artwork/icons/Document-b3-16.psd -text
