Adding LassScript mode.

--- a/.gitattributes
+++ b/.gitattributes
@@ -614,6 +614,24 @@ Modes/LaTeX.mode/Contents/Resources/German.lproj/Localizable.strings -text
 Modes/LaTeX.mode/Contents/Resources/ModeSettings.xml -text
 Modes/LaTeX.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/LaTeX.mode/Contents/Resources/SyntaxDefinition.xml -text
+Modes/LassoScript-HTML.mode/Contents/Info.plist -text
+Modes/LassoScript-HTML.mode/Contents/Resources/AutocompleteAdditions.txt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/ChangeLog.txt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/LassoScript-HTML.mode/Contents/Resources/English.lproj/Localizable.strings -text
+Modes/LassoScript-HTML.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/LassoScript-HTML.mode/Contents/Resources/German.lproj/Localizable.strings -text
+Modes/LassoScript-HTML.mode/Contents/Resources/ModeSettings.xml -text
+Modes/LassoScript-HTML.mode/Contents/Resources/RegexSymbols.xml -text
+Modes/LassoScript-HTML.mode/Contents/Resources/Scripts/10-Close[!!-~]Last[!!-~]Tag.scpt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/Scripts/20-InsertHTMLColor.scpt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/Scripts/25-Add[!!-~]Link.scpt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/Scripts/30-CheckSyntax.scpt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/Scripts/Comment[!!-~]Selection.scpt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]PHP[!!-~]Documentation.scpt -text
+Modes/LassoScript-HTML.mode/Contents/Resources/Scripts/shell/closetag.pl -text
+Modes/LassoScript-HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
+Modes/LassoScript-HTML.mode/Contents/Resources/ToolbarIconLassoScriptLookup.png -text
 Modes/Lua.mode/Contents/Info.plist -text
 Modes/Lua.mode/Contents/Resources/ChangeLog.txt -text
 Modes/Lua.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
