Adding CFML mode as of Coda 1.0.4b

--- a/.gitattributes
+++ b/.gitattributes
@@ -503,6 +503,41 @@ Modes/C.mode/Contents/Resources/Scripts/30-Check[!!-~]Syntax.scpt -text
 Modes/C.mode/Contents/Resources/Scripts/60-un_comment_lines.scpt -text
 Modes/C.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/C.mode/Contents/Resources/ToolbarCounterpart.png -text
+Modes/CFML.mode/Contents/Info.plist -text
+Modes/CFML.mode/Contents/Resources/ModeSettings.xml -text
+Modes/CFML.mode/Contents/Resources/RegexSymbols.xml -text
+Modes/CFML.mode/Contents/Resources/Scripts/Add[!!-~]Link.scpt -text
+Modes/CFML.mode/Contents/Resources/Scripts/CloseLastTag.scpt -text
+Modes/CFML.mode/Contents/Resources/Scripts/Comment[!!-~]Selection.scpt -text
+Modes/CFML.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
+Modes/CFML.mode/Contents/Resources/Scripts/Validate.scpt -text
+Modes/CFML.mode/Contents/Resources/Scripts/shell/closetag.pl -text
+Modes/CFML.mode/Contents/Resources/Scripts/shell/validate.pl -text
+Modes/CFML.mode/Contents/Resources/Symbol!.tif -text
+Modes/CFML.mode/Contents/Resources/SymbolD.tif -text
+Modes/CFML.mode/Contents/Resources/SymbolH.tif -text
+Modes/CFML.mode/Contents/Resources/Symbola.tif -text
+Modes/CFML.mode/Contents/Resources/SyntaxDefinition.xml -text
+Modes/CFML.mode/Contents/Resources/cfapplication.tif -text
+Modes/CFML.mode/Contents/Resources/cfargument.tif -text
+Modes/CFML.mode/Contents/Resources/cfdump.tif -text
+Modes/CFML.mode/Contents/Resources/cfftp.tif -text
+Modes/CFML.mode/Contents/Resources/cffunction.tif -text
+Modes/CFML.mode/Contents/Resources/cfhttp.tif -text
+Modes/CFML.mode/Contents/Resources/cfhttpparam.tif -text
+Modes/CFML.mode/Contents/Resources/cfinclude.tif -text
+Modes/CFML.mode/Contents/Resources/cflocation.tif -text
+Modes/CFML.mode/Contents/Resources/cflock.tif -text
+Modes/CFML.mode/Contents/Resources/cfloop.tif -text
+Modes/CFML.mode/Contents/Resources/cfobject.tif -text
+Modes/CFML.mode/Contents/Resources/cfoutput.tif -text
+Modes/CFML.mode/Contents/Resources/cfparam.tif -text
+Modes/CFML.mode/Contents/Resources/cfprocparam.tif -text
+Modes/CFML.mode/Contents/Resources/cfprocresult.tif -text
+Modes/CFML.mode/Contents/Resources/cfquery.tif -text
+Modes/CFML.mode/Contents/Resources/cfqueryparam.tif -text
+Modes/CFML.mode/Contents/Resources/cfset.tif -text
+Modes/CFML.mode/Contents/Resources/cfstoredproc.tif -text
 Modes/CSS.mode/Contents/Info.plist -text
 Modes/CSS.mode/Contents/Resources/AutocompleteAdditions.txt -text
 Modes/CSS.mode/Contents/Resources/ChangeLog.txt -text
