- final icon of bobby - preliminary text and seetext icons

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,11 @@ artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
+artwork/bobby/Final/newsubethaedit.psd -text
+artwork/bobby/SEE3.0/SEETextIconTemplate.psd -text
+artwork/bobby/SEE3.0/TextBase.psd -text
+artwork/bobby/SEE3.0/TextIconTemplate.psd -text
+artwork/bobby/SEE3.0/prelim.psd -text
 artwork/bobby/Woody.lineform/data -text
 artwork/bobby/Woody.lineform/image0.png -text
 artwork/bobby/bigtest4.png -text
