- added base for mode and style icons

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,7 +6,10 @@ artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
 artwork/bobby/Final/newsubethaedit.psd -text
+artwork/bobby/SEE3.0/Mode512.png -text
+artwork/bobby/SEE3.0/ModeStyleBase.psd -text
 artwork/bobby/SEE3.0/SEETextIconTemplate.psd -text
+artwork/bobby/SEE3.0/Style512.png -text
 artwork/bobby/SEE3.0/TextBase.psd -text
 artwork/bobby/SEE3.0/TextIconTemplate.psd -text
 artwork/bobby/SEE3.0/prelim.psd -text
