- cleaned up bobbys photoshop file to make it more usable for us

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,9 @@ artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
+artwork/bobby/Final/MenWithoutShadow.psd -text
 artwork/bobby/Final/newsubethaedit.psd -text
+artwork/bobby/Final/newsubethaeditcleanedup.psd -text
 artwork/bobby/SEE3.0/Mode512.png -text
 artwork/bobby/SEE3.0/ModeStyleBase.psd -text
 artwork/bobby/SEE3.0/SEETextIconTemplate.psd -text
