--- a/.gitattributes
+++ b/.gitattributes
@@ -1662,11 +1662,13 @@ test/Performance/CreateStringByUnicharTest/Info.plist -text
 test/Performance/CreateStringByUnicharTest/main.m -text
 test/Performance/EncodingTests/LongAndFew.txt -text
 test/Performance/EncodingTests/LongAndMany.txt -text
+test/Syntax/C++/TemplatingSymbols.h -text
 test/Syntax/ERB/application.rhtml -text
 test/Syntax/HTML/tcm-index.html -text
 test/Syntax/Java/ParseTree-NoSymbols.java -text
 test/Syntax/PHP-HTML/Classes.php -text
 test/Syntax/PHP-HTML/Library.php -text
+test/Syntax/Perl/regexmatch.pl -text
 tool/AutoCompleteParsers/classes.pl -text
 tool/AutoCompleteParsers/gogogo.sh -text
 tool/AutoCompleteParsers/lensort -text
