- added the final Iconfactory artwork

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,13 @@ artwork/Bonjour[!!-~]Icons/Bonjour_16_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
+artwork/IconFactory/Final/Base_Large.psd -text
+artwork/IconFactory/Final/SEEModeIconTemplate.psd -text
+artwork/IconFactory/Final/icns/Mode.icns -text
+artwork/IconFactory/Final/icns/SubEthaEdit.icns -text
+artwork/IconFactory/Final/icns/SubEthaEditFiles.icns -text
+artwork/IconFactory/Final/icns/seetext.icns -text
+artwork/IconFactory/Final/icns/style.icns -text
 artwork/LogoGreenFullSize.psd -text
 artwork/bobby/Final/MenWithoutShadow.psd -text
 artwork/bobby/Final/newsubethaedit.psd -text
