--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/IconFactory/Final/Base_Large.psd -text
+artwork/IconFactory/Final/ModeStyleBase.psd -text
 artwork/IconFactory/Final/SEEModeIconTemplate.psd -text
 artwork/IconFactory/Final/icns/Mode.icns -text
 artwork/IconFactory/Final/icns/SubEthaEdit.icns -text
@@ -16,7 +17,6 @@ artwork/bobby/Final/MenWithoutShadow.psd -text
 artwork/bobby/Final/newsubethaedit.psd -text
 artwork/bobby/Final/newsubethaeditcleanedup.psd -text
 artwork/bobby/SEE3.0/Mode512.png -text
-artwork/bobby/SEE3.0/ModeStyleBase.psd -text
 artwork/bobby/SEE3.0/SEETextIconTemplate.psd -text
 artwork/bobby/SEE3.0/Style512.png -text
 artwork/bobby/SEE3.0/TextBase.psd -text
