--- a/.gitattributes
+++ b/.gitattributes
@@ -2006,6 +2006,7 @@ tool/serials/maczot.txt -text
 tool/serials/makeserial.pl -text
 tool/serials/serials1.txt -text
 tool/serials/serials2.txt -text
+tool/serials/twolicenses.txt -text
 tool/xmpp-cli/Controller.h -text
 tool/xmpp-cli/Controller.m -text
 tool/xmpp-cli/main.m -text
