Serials for apple giveaway

--- a/.gitattributes
+++ b/.gitattributes
@@ -2422,6 +2422,7 @@ tool/seeflyopts/src/flyopts.m -text
 tool/seeflyopts/src/flyopts.pch -text
 tool/seeflyopts/src/main.m -text
 tool/seeserver.pl -text
+tool/serials/appleserials.txt -text
 tool/serials/attackserial.pl -text
 tool/serials/checkserial.pl -text
 tool/serials/checkserial/checkserial.xcode/pittenau.pbxuser -text
