--- a/.gitattributes
+++ b/.gitattributes
@@ -403,6 +403,8 @@ subethaedit/FontAttributesToStringValueTransformer.h -text
 subethaedit/FontAttributesToStringValueTransformer.m -text
 subethaedit/GeneralPreferences.h -text
 subethaedit/GeneralPreferences.m -text
+subethaedit/GenericSASLProfile.h -text
+subethaedit/GenericSASLProfile.m -text
 subethaedit/German.lproj/AboutPanel.nib/classes.nib -text
 subethaedit/German.lproj/AboutPanel.nib/info.nib -text
 subethaedit/German.lproj/AboutPanel.nib/keyedobjects.nib -text
