--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,7 @@ subethaedit/SeeTextImporter/SeeTextImporter.xcodeproj/*.pbxuser
 subethaedit/Sparkle/Sparkle.xcodeproj/*.mode2
 subethaedit/Sparkle/Sparkle.xcodeproj/*.pbxuser
 subethaedit/SubEthaEdit-PantherScripting.r
-subethaedit/SubEthaEdit.xcodeproj/*.mode1
-subethaedit/SubEthaEdit.xcodeproj/*.mode2
+subethaedit/SubEthaEdit.xcodeproj/*.mode*
 subethaedit/SubEthaEdit.xcodeproj/*.pbxuser
 subethaedit/SubEthaEditScripting.r
 subethaedit/SubEthaEditSuite.scriptSuite
