- added a notes documentation for seed - added newlines to SessionCreation so the correct line ending will be recognized

--- a/.gitattributes
+++ b/.gitattributes
@@ -179,6 +179,7 @@ documentation/manual/shared/_technology.xml -text
 documentation/manual/xep-4.6-20060623-trial.zip -text
 documentation/manual/xep_license.xml -text
 documentation/participants-drawer.jpg -text
+documentation/seed.notes -text
 documentation/session-lifcycle.jpg -text
 documentation/syntax-styles-whiteboard.jpg -text
 documentation/whiteboard-1411.jpg -text
