finally fixed SEE-2171 - this is a tiger release bug with childwindows on terminate.

--- a/.gitattributes
+++ b/.gitattributes
@@ -443,6 +443,8 @@ HTMLExport/Base.html -text
 /LayoutManager.m -text
 /LicenseController.h -text
 /LicenseController.m -text
+/LockWindow.h -text
+/LockWindow.m -text
 /LoginSheetController.h -text
 /LoginSheetController.m -text
 /ModeSettings.h -text
