--- a/tool/TCMPortMapper/Info.plist
+++ b/tool/TCMPortMapper/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>PortMap</string>
 	<key>CFBundleIdentifier</key>
 	<string>de.codingmonkeys.PortMap</string>
 	<key>CFBundleInfoDictionaryVersion</key>
