- added Port Map (dom) target as well as slightly different icons for the two apps

--- a/.gitattributes
+++ b/.gitattributes
@@ -2409,6 +2409,21 @@ tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnperrors.c -text
 tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnperrors.h -text
 tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpreplyparse.c -text
 tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpreplyparse.h -text
+tool/TCMPortMapper/general_artwork/PortMapIcon.acorn -text
+tool/TCMPortMapper/portmap_dom/AppController.h -text
+tool/TCMPortMapper/portmap_dom/AppController.m -text
+tool/TCMPortMapper/portmap_dom/English.lproj/InfoPlist.strings -text
+tool/TCMPortMapper/portmap_dom/English.lproj/MainMenu.nib/designable.nib -text
+tool/TCMPortMapper/portmap_dom/English.lproj/MainMenu.nib/keyedobjects.nib -text
+tool/TCMPortMapper/portmap_dom/Info.plist -text
+tool/TCMPortMapper/portmap_dom/PortMapper_Prefix.pch -text
+tool/TCMPortMapper/portmap_dom/artwork/DotGreen.png -text
+tool/TCMPortMapper/portmap_dom/artwork/DotRed.png -text
+tool/TCMPortMapper/portmap_dom/artwork/DotYellow.png -text
+tool/TCMPortMapper/portmap_dom/artwork/Off20.png -text
+tool/TCMPortMapper/portmap_dom/artwork/On20.png -text
+tool/TCMPortMapper/portmap_dom/artwork/PortMap.icns -text
+tool/TCMPortMapper/portmap_dom/main.m -text
 tool/TCMPortMapper/portmap_map/Controller.h -text
 tool/TCMPortMapper/portmap_map/Controller.m -text
 tool/TCMPortMapper/portmap_map/English.lproj/InfoPlist.strings -text
