--- a/.gitattributes
+++ b/.gitattributes
@@ -2420,6 +2420,8 @@ tool/TCMPortMapper/portmap_dom/English.lproj/MainMenu.nib/designable.nib -text
 tool/TCMPortMapper/portmap_dom/English.lproj/MainMenu.nib/keyedobjects.nib -text
 tool/TCMPortMapper/portmap_dom/Info.plist -text
 tool/TCMPortMapper/portmap_dom/PortMapper_Prefix.pch -text
+tool/TCMPortMapper/portmap_dom/TCMPortMappingAdditions.h -text
+tool/TCMPortMapper/portmap_dom/TCMPortMappingAdditions.m -text
 tool/TCMPortMapper/portmap_dom/TCMPortStringFromPublicPortValueTransformer.h -text
 tool/TCMPortMapper/portmap_dom/TCMPortStringFromPublicPortValueTransformer.m -text
 tool/TCMPortMapper/portmap_dom/TCMStatusImageFromMappingStatusValueTransformer.h -text
