- now with more occassions to write the defaults - now with presets in the add mapping sheet - added reference string to construct e.g. URLs - fixed an issue where the framework crashed when removing a mapping while no compatible router was found - removed some nslogging

--- a/.gitattributes
+++ b/.gitattributes
@@ -2420,6 +2420,7 @@ tool/TCMPortMapper/portmap_dom/English.lproj/MainMenu.nib/designable.nib -text
 tool/TCMPortMapper/portmap_dom/English.lproj/MainMenu.nib/keyedobjects.nib -text
 tool/TCMPortMapper/portmap_dom/Info.plist -text
 tool/TCMPortMapper/portmap_dom/PortMapper_Prefix.pch -text
+tool/TCMPortMapper/portmap_dom/Presets.plist -text
 tool/TCMPortMapper/portmap_dom/TCMPortMappingAdditions.h -text
 tool/TCMPortMapper/portmap_dom/TCMPortMappingAdditions.m -text
 tool/TCMPortMapper/portmap_dom/TCMPortStringFromPublicPortValueTransformer.h -text
