- moved dotblah.pngs out of my home for use in other examples - created the natecho example. a simple echo server that maps its port (e.g. the standard use case for the library) - found a lot of bugs on the way - including the endless thread loop bug - and others - moved the ip address finding in localIPAddress in portmapper - which clients can always use - fixed some logical erros in the local ip address code found when tested - fixed a crash when stopping a upnp port mapper that never was run by not stopping it anymore if it is not - added the transport protocol to the init method of the portmappings
next steps:
- add a method that can be called on quit that removes the portmappings synchronously so the app removes its ports when stopping
- use this method to remove mappings on sleep
- add code to refresh on wake if _isRunning

--- a/.gitattributes
+++ b/.gitattributes
@@ -2412,7 +2412,19 @@ tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnperrors.c -text
 tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnperrors.h -text
 tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpreplyparse.c -text
 tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpreplyparse.h -text
+tool/TCMPortMapper/general_artwork/DotGreen.png -text
+tool/TCMPortMapper/general_artwork/DotRed.png -text
+tool/TCMPortMapper/general_artwork/DotYellow.png -text
 tool/TCMPortMapper/general_artwork/PortMapIcon.acorn -text
+tool/TCMPortMapper/natecho/AppController.h -text
+tool/TCMPortMapper/natecho/AppController.m -text
+tool/TCMPortMapper/natecho/English.lproj/MainMenu.nib/designable.nib -text
+tool/TCMPortMapper/natecho/English.lproj/MainMenu.nib/keyedobjects.nib -text
+tool/TCMPortMapper/natecho/NATEcho-Info.plist -text
+tool/TCMPortMapper/natecho/TCPServer.h -text
+tool/TCMPortMapper/natecho/TCPServer.m -text
+tool/TCMPortMapper/natecho/main.m -text
+tool/TCMPortMapper/natecho/natecho_prefix.pch -text
 tool/TCMPortMapper/portmap_dom/AppController.h -text
 tool/TCMPortMapper/portmap_dom/AppController.m -text
 tool/TCMPortMapper/portmap_dom/English.lproj/InfoPlist.strings -text
@@ -2427,9 +2439,6 @@ tool/TCMPortMapper/portmap_dom/TCMPortStringFromPublicPortValueTransformer.h -te
 tool/TCMPortMapper/portmap_dom/TCMPortStringFromPublicPortValueTransformer.m -text
 tool/TCMPortMapper/portmap_dom/TCMStatusImageFromMappingStatusValueTransformer.h -text
 tool/TCMPortMapper/portmap_dom/TCMStatusImageFromMappingStatusValueTransformer.m -text
-tool/TCMPortMapper/portmap_dom/artwork/DotGreen.png -text
-tool/TCMPortMapper/portmap_dom/artwork/DotRed.png -text
-tool/TCMPortMapper/portmap_dom/artwork/DotYellow.png -text
 tool/TCMPortMapper/portmap_dom/artwork/GenericQuestionMarkIcon.icns -text
 tool/TCMPortMapper/portmap_dom/artwork/Off20.png -text
 tool/TCMPortMapper/portmap_dom/artwork/On20.png -text
