--- a/tool/TCMPortMapper/portmap_dom/Info.plist
+++ b/tool/TCMPortMapper/portmap_dom/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0ß</string>
+	<string>1.0b</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
